--- a/sopiadaboa/src/assets/css/Global.css
+++ b/sopiadaboa/src/assets/css/Global.css
@@ -1,47 +1,145 @@
-/*----Background----*/
-@media only screen and (min-width:541px){    
+/*--GLOBAL--*/
+/*--FONT--*/
+@font-face{
+    font-family: 'Avenir';
+    src: url('../font/Avenir_Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+/*/--FONT--*/
+body{
+    font-family: 'Avenir';
+    margin: 0px;
+    width: 100%;
+    height: auto;
+}
+/*---HOME---*/
+.ha{
+    margin-top: -46,89px;
+    margin-left: -120px;
+}
+.ha1{
+    margin-top: -40px;
+    margin-left: 50px;    
+}
+.ha2{
+    margin-top: -70px;
+    margin-left: 140px;     
+}
+.ha3{
+    margin-top: -20px;
+    margin-left: -120px;     
+}
+h1{
+    font-weight: 400;
+    font-size: calc(38px - 1vmin);
+    text-size-adjust: auto;
+    color: #565656; 
+}
+/*/---HOME---*/
+/*/--GLOBAL--*/
+/*--RESPONSIVO--*/
+@media only screen and (min-width:641px){    
     .bkDrapery{
-        width: 100vw;
+        margin: 0px;
         height: 100vh;
-        margin:-8px;
         background: linear-gradient(
             rgba(200,5,27,0.9),
             rgba(200,5,27,0.9)
         ),
         url('../img/image7.png');
-        background-size: 100%;
+        background-size: 110%;
         background-repeat: no-repeat;
         background-position: center;
         -webkit-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
         -moz-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
         -o-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
         transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
-    }
-    .Home{
-        padding-top:5%;
-        padding-bottom:10%;
-        padding-left:35% 
+        align-items: center;
     }
     .rtHome{
         position: absolute;
-        width:450px;
-        height:600px;
-        background-color:#F5F0E6;
-        box-shadow:0px 20px 50px rgba(0,0,0,0.15);
-        border-radius:30px;
+        margin-top: 10px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 450px;
+        height: 600px;
+        
+        background: #F5F0E6;
+        box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
+        border-radius: 30px;
+    }
+    .txHome{
+        position: absolute;
+        width: 334px;
+        height: 132px;
+        left: 58px;
+        top: 292px;
+    
+        text-size-adjust: auto;
+        font-size: 16px;
+        line-height: 22px;
+        text-align: center;
+        color: #565656;
     }
     .btNext{
         position: absolute;
         width: 280px;
         height: 50px;
-        background-color: rgba(200,5,27,0.9);
-        color:#F5F0E6;
-        border-radius: 10px;
         left: 85px;
         top: 509px;
+        
+        background: rgba(200, 5, 27, 0.9);
+        border-radius: 10px;
+        color: #F5F0E6;
+    }
+    .mic{
+        display: block;
+        position: absolute;
+        margin-left: -70px;
+        margin-top: -120px;
+        width: 125px;
+        height: 330px;
+    
+        background: url(../img/toppng2.png);
+        background-size: 135%;
+        background-position: center;
+        background-repeat: no-repeat;
+        filter: drop-shadow(-10px 4px 40px rgba(0, 0, 0, 0.25));
+        -webkit-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
+        -moz-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
+        -o-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
+        transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
+    }
+    .rtLJokes{
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -70%);
+        width: 900px;
+        height: 600px;
+        padding-top: 60px;
+        padding-left: 150px;
+        padding-right: 150px;
+        padding-bottom: 60px;
+
+        background: #F5F0E6;
+        box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
+        border-radius: 30px;
+    }
+    .cardJokes{
+        width: 600px;
+        height: 207px;
+        left: 206px;
+        top: 145px;
+
+        background: #FFFFFF;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+        border-radius: 8px;
     }
 }
-@media only screen and (max-width:540px){
+@media only screen and (max-width:640px){
     .bkDrapery{
         min-height: 110vh;
         margin: -10px;
@@ -58,20 +156,28 @@
         -o-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
         transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
     }
-    .Home{
-        padding-top:15%;
-        padding-bottom:15px;
-        padding-left:5%;
-        align-items: center;
-    }
     .rtHome{
         position: absolute;
         margin-bottom: 10px;
+        margin-left: 8%;
+        margin-top: 15%;
         width:90%;
         height:600px;
         background-color:#F5F0E6;
         box-shadow:0px 20px 50px rgba(0,0,0,0.15);
         border-radius:30px;
+    }
+    .txHome{
+        margin-left: 35px;
+        margin-right: 35px;
+        left: 58px;
+        top: 292px;
+    
+        text-size-adjust: auto;
+        font-size: 16px;
+        line-height: 22px;
+        text-align: center;
+        color: #565656;
     }
     .btNext{
         position: absolute;
@@ -83,4 +189,8 @@
         border-radius: 10px;
         top: 509px;
     }
+    .mic{
+        display: none;
+    }
 }
+/*/--RESPONSIVO--*/
