--- a/sopiadaboa/src/assets/css/Global.css
+++ b/sopiadaboa/src/assets/css/Global.css
@@ -37,6 +37,158 @@ h1{
     color: #565656; 
 }
 /*/---HOME---*/
+/*---LIST JOKES---*/
+.cardJokes{
+    width: 100%;
+    height: 200px;
+    padding: 30px;
+
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+}
+.brJSearch{
+    width: 100%;
+    height: 100%;
+    padding-left: 60px;
+    font-size: 16px;
+    line-height: 22px;
+
+    background: url('../img/pesquisa.png');
+    background-position-y: 9px;
+    background-position-x: 20px;
+    background-repeat: no-repeat;
+    border: 1px solid #DCD8D0;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.brJSearch::-webkit-input-placeholder{
+    color:  rgba(0, 0, 0, 0.2);
+}
+.brJSearch:focus{
+    outline: none;
+    border: 1px solid #DCD8D0;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.brJOrder{
+    margin-left: -10px;
+    width: 90%;
+    height: 100%;
+    padding-left: 60px;
+    font-size: 16px;
+    line-height: 22px;
+
+    background: url('../img/ordenar.png');
+    background-position-y: 9px;
+    background-position-x: 20px;
+    background-repeat: no-repeat;
+    border: 1px solid #DCD8D0;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.brJOrder::-webkit-input-placeholder{
+    color:  rgba(0, 0, 0, 0.2);
+}
+.brJOrder:focus{
+    outline: none;
+    border: 1px solid #DCD8D0;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.brJBtCreate{
+    margin-left: -20px;
+    width: 95%;
+    height: 100%;
+    
+    font-size: 16px;
+    line-height: 22px;
+    background: rgba(200, 5, 27, 0.9);
+    border: 1px solid rgba(200, 5, 27, 0.9);
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.txJoke{
+    width: 100%;
+    height: 110px;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: justify;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+    color: #565656;
+}
+.uJName{
+    width: 100%;   
+    margin-left: -40px;
+    text-align: left;
+    font-size: 16px;
+    line-height: 22px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    color: #0A325E;
+}
+.lkJ{
+    width: 70px;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 19px;
+    padding-right: 2px;
+    padding-left: 2px;
+    
+    color: #1DCC4D;
+    background-color: unset;
+    background: url('../img/like.png');
+    background-repeat: no-repeat;
+    background-position-x: 2px;
+    background-position-y: 2px;
+    border: unset;
+}
+.lkJ:focus{
+    outline: none;
+    border: unset;
+    background-color: unset;
+}
+.dkJ{
+    width: 70px;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 19px;
+    padding-right: 2px;
+    padding-left: 2px;
+    
+    color: #CD1D26;
+    background-color: unset;
+    background: url('../img/deslike.png');
+    background-repeat: no-repeat;
+    background-position-x: 2px;
+    background-position-y: 2px;
+    border: unset;
+}
+.dkJ:focus{
+    outline: none;
+    border: unset;
+    background-color: unset;
+}
+.dtCJ{
+    text-align: right;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 19px;
+
+    color: rgba(0, 0, 0, 0.2);
+}
+.dialogJ{    
+    width: 600px;
+    height: 401px;
+
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+}
+/*/---LIST JOKES---*/
 /*/--GLOBAL--*/
 /*--RESPONSIVO--*/
 @media only screen and (min-width:641px){    
@@ -48,7 +200,7 @@ h1{
             rgba(200,5,27,0.9)
         ),
         url('../img/image7.png');
-        background-size: 110%;
+        background-size: 100%;
         background-repeat: no-repeat;
         background-position: center;
         -webkit-transition: all .01s cubic-bezier(.190, 1.000, .220, 1.000);
@@ -100,7 +252,7 @@ h1{
         margin-left: -70px;
         margin-top: -120px;
         width: 125px;
-        height: 330px;
+        height: 340px;
     
         background: url(../img/toppng2.png);
         background-size: 135%;
@@ -114,29 +266,19 @@ h1{
     }
     .rtLJokes{
         position: absolute;
-        top: 70%;
+        top: 50%;
         left: 50%;
-        transform: translate(-50%, -70%);
+        transform: translate(-50%, -50%);
         width: 900px;
         height: 600px;
         padding-top: 60px;
         padding-left: 150px;
         padding-right: 150px;
-        padding-bottom: 60px;
+        padding-bottom: 20px;
 
         background: #F5F0E6;
         box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
         border-radius: 30px;
-    }
-    .cardJokes{
-        width: 600px;
-        height: 207px;
-        left: 206px;
-        top: 145px;
-
-        background: #FFFFFF;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-        border-radius: 8px;
     }
 }
 @media only screen and (max-width:640px){
