--- a/sopiadaboa/src/assets/css/Global.css
+++ b/sopiadaboa/src/assets/css/Global.css
@@ -38,15 +38,6 @@ h1{
 }
 /*/---HOME---*/
 /*---LIST JOKES---*/
-.cardJokes{
-    width: 100%;
-    height: 200px;
-    padding: 30px;
-
-    background: #FFFFFF;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
-    border-radius: 8px;
-}
 .brJSearch{
     width: 100%;
     height: 100%;
@@ -73,7 +64,7 @@ h1{
 }
 .brJOrder{
     margin-left: -10px;
-    width: 90%;
+    width: 100%;
     height: 100%;
     padding-left: 60px;
     font-size: 16px;
@@ -98,7 +89,7 @@ h1{
 }
 .brJBtCreate{
     margin-left: -20px;
-    width: 95%;
+    width: 100%;
     height: 100%;
     
     font-size: 16px;
@@ -108,9 +99,25 @@ h1{
     box-sizing: border-box;
     border-radius: 8px;
 }
-.txJoke{
+.listJ{
+    width: 100%;
+    height: 500px;
+    overflow: auto;
+    overflow-y: scroll;
+}
+.cardJokes{
+    width: 100%;
+    height: 200px;
+    padding: 30px;
+
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+}
+.bxJoke{
     width: 100%;
     height: 110px;
+    margin-top:-20px;
     font-size: 16px;
     line-height: 24px;
     text-align: justify;
@@ -118,6 +125,13 @@ h1{
     text-overflow: ellipsis;
     
     color: #565656;
+}
+.bxLrJ1{
+    width: 50%;
+}
+.bxLrJ2{
+    display: flex;
+    width: 50%;
 }
 .uJName{
     width: 100%;   
@@ -181,12 +195,73 @@ h1{
     color: rgba(0, 0, 0, 0.2);
 }
 .dialogJ{    
-    width: 600px;
+    margin: 0px;
     height: 401px;
+    padding: 30px;
 
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
     border-radius: 8px;
+}
+.dialogTJ{
+    height: 180px;
+    font-size: 16px;
+    line-height: 22px;
+    text-align: justify;
+    overflow: auto;
+
+    color: #565656;
+}
+.dialogCJ{
+    text-align: right;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+
+    color: rgba(0, 0, 0, 0.2);
+}
+.line{
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.dialogOp{
+    width: 50%;
+}
+.dialoglkJ{
+    width: 154px;
+    height: 50px;
+    margin-left: -20px;
+    margin-top: 20px;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    padding-right: 2px;
+    padding-left: 5px;
+    
+    color: #FFFFFF;
+    background: url('../img/chorei.png');
+    background-repeat: no-repeat;
+    background-position-x: 15px;
+    background-position-y: 9px;
+    border: unset;
+    border-radius: 4px;
+}
+.dialogdkJ{
+    width: 154px;
+    height: 50px;
+    margin-top: 20px;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    padding-right: 2px;
+    padding-left: 5px;
+    
+    color: #FFFFFF;
+    background: url('../img/nemRi.png');
+    background-repeat: no-repeat;
+    background-position-x: 15px;
+    background-position-y: 9px;
+    border: unset;
+    border-radius: 4px;
 }
 /*/---LIST JOKES---*/
 /*/--GLOBAL--*/
@@ -252,7 +327,7 @@ h1{
         margin-left: -70px;
         margin-top: -120px;
         width: 125px;
-        height: 340px;
+        height: 365px;
     
         background: url(../img/toppng2.png);
         background-size: 135%;
@@ -266,11 +341,11 @@ h1{
     }
     .rtLJokes{
         position: absolute;
+        width: 900px;
+        height: 600px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 900px;
-        height: 600px;
         padding-top: 60px;
         padding-left: 150px;
         padding-right: 150px;
@@ -280,11 +355,39 @@ h1{
         box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15);
         border-radius: 30px;
     }
+    .bxBrJ0{
+        display: flex;
+    }
+    .bxBrJ1{
+        width: 50%;
+        height: 40px;
+    }
+    .bxBrJ2{
+        width: 50%;
+        height: 40px;
+        margin-top: -8px;
+    }
+    .bxLtJ0{
+        display: block;
+        margin: -8px;
+        padding: -8px;
+    }
+    .bxLtJ1{
+        margin-bottom: -20px;
+        margin-top: -20px;
+        margin-left: -20px;
+    }
+    .bxLtJ2{
+        display: none;
+    }
+    .bxLrJ3{
+        text-align: right;
+    }
 }
 @media only screen and (max-width:640px){
     .bkDrapery{
         min-height: 110vh;
-        margin: -10px;
+        margin: 0px;
         background: linear-gradient(
             rgba(200,5,27,0.9),
             rgba(200,5,27,0.9)
@@ -333,6 +436,112 @@ h1{
     }
     .mic{
         display: none;
+    }
+    .rtLJokes{
+        width: 100vw;
+        height: 110vh;
+        margin: 0px;
+        padding-top: 20px;
+        padding-bottom: 0px;
+
+        background: #F5F0E6;
+    }
+    .bxBrJ0{
+        display: block;
+        padding: -8px;
+        margin: -8px;
+        padding-top: 40px;
+        margin-bottom: 20px;
+    }
+    .bxBrJ1{
+        width: 95%;
+        height: 40px;
+        padding: -8px;
+        margin: -8px;
+    }
+    .brJSearch{
+        width: 96%;
+    }
+    .bxBrJ2{
+        width: 95%;
+        height: 40px;
+        padding: -8px;
+        margin: -8px;
+        margin-top: -8px;
+        margin-bottom: 10px;
+    }
+    .brJOrder{
+        margin-left: 0px;
+    }
+    .brJBtCreate{
+        margin-left: 0px;
+    }
+    .listJ{
+        width: 90vw;
+        height: 80vh;
+        padding: -8px;
+        margin: -8px;
+        margin-left: -18px;
+        overflow: auto;
+    }
+    .cardJokes{
+        width: 90%;
+        height: 267px;
+        margin: 0px;
+        padding: 20px;
+        margin-left: -20px;
+
+        background: #FFFFFF;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+        border-radius: 8px;
+    }
+    .bxLtJ0{
+        display: flex;
+        margin: -8px;
+        padding: -8px;
+    }
+    .bxLtJ1{
+        margin-bottom: -20px;
+        margin-top: -20px;
+        margin-left: -20px;
+    }
+    .bxLtJ2{
+        display: block;
+        margin-top: -20px;
+        margin-right: -20px;
+        text-align: right;
+    }
+    .bxJoke{
+        height: 160px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .bxLrJ21{
+        margin-right: -10px;
+    }
+    .uJName{
+        white-space: nowrap; 
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    .bxLrJ2{
+        margin-right: -10px;
+        align-items: inherit;
+    }
+    .bxLrJ3{
+        display: none;
+    }
+    .dialogOp{
+        width: 100%;
+    }
+    .dialoglkJ{
+        width: 130px;
+        margin-left: -30px;
+        padding-left: 35px;
+    }
+    .dialogdkJ{
+        width: 130px;
+        padding-left: 35px;
     }
 }
 /*/--RESPONSIVO--*/
