--- a/sopiadaboa/src/assets/css/Global.css
+++ b/sopiadaboa/src/assets/css/Global.css
@@ -113,6 +113,7 @@ h1{
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
     border-radius: 8px;
+    cursor: pointer;
 }
 .bxJoke{
     width: 100%;
@@ -264,6 +265,65 @@ h1{
     border-radius: 4px;
 }
 /*/---LIST JOKES---*/
+/*---CREATE---*/
+.bxCreate{
+    display: flex;
+}
+.txCreate{    
+    width: 90%;
+    height: 30px;
+    padding: 10px;
+    font-size: 18px;
+
+    background: #E9E4DA;
+    border-radius: 8px;
+    border: unset;
+}
+.txCreate:focus{
+    outline: none;
+    border: unset;
+}
+.txACreate{    
+    width: 95%;
+    height: 185px;
+    padding: 10px;
+    font-size: 18px;
+
+    background: #E9E4DA;
+    border-radius: 8px;
+    border: unset;
+}
+.txACreate:focus{
+    outline: none;
+    border: unset;
+}
+.btCancelCreate{
+    width: 182px;
+    height: 50px;
+    font-size: 16px;
+    margin-right: 10px;
+    margin-left: -20px;
+    
+    color: #cd1d2f;
+    background-color: rgba(255, 255, 255, 0.9);
+    opacity: 0.8;
+    border: 1px solid rgba(200, 5, 27, 0.9);
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+.btCreate{
+    width: 182px;
+    height: 50px;
+    font-size: 16px;
+    
+    color:#FFFFFF;
+    background: rgba(200, 5, 27, 0.9);
+    border: 1px solid rgba(255, 255, 255, 0.9);
+    box-sizing: border-box;
+    border-radius: 8px;
+
+}
+/*/---CREATE---*/
 /*/--GLOBAL--*/
 /*--RESPONSIVO--*/
 @media only screen and (min-width:641px){    
@@ -327,7 +387,7 @@ h1{
         margin-left: -70px;
         margin-top: -120px;
         width: 125px;
-        height: 365px;
+        height: 346px;
     
         background: url(../img/toppng2.png);
         background-size: 135%;
@@ -404,7 +464,7 @@ h1{
     .rtHome{
         position: absolute;
         margin-bottom: 10px;
-        margin-left: 8%;
+        margin-left: 5%;
         margin-top: 15%;
         width:90%;
         height:600px;
@@ -542,6 +602,15 @@ h1{
     .dialogdkJ{
         width: 130px;
         padding-left: 35px;
+    }
+    .bxCreate{
+        display: block;
+    }
+    .btCancelCreate{
+        width: 150px;
+    }
+    .btCreate{
+        width: 150px;    
     }
 }
 /*/--RESPONSIVO--*/
